[GStreamer] Crash when setting the deadline property of vpxenc https://bugs.webkit.org/show_bug.cgi?id=257487

Reviewed by Xabier Rodriguez-Calvar.

Set the deadline property explicitely typed as int64 and with the right value for realtime
processing.

* Source/WebCore/platform/gstreamer/VideoEncoderPrivateGStreamer.cpp:
(webkit_video_encoder_class_init):

Canonical link: https://commits.webkit.org/264719@main